# ScalFMM_vortex

./: CPackConfig.cmake  CTestConfig.cmake  README.md  buildInput.cpp  scalfmmConfig.cmake.in
CMakeModules/: utils.cmake
Data/: unitCubeXYZF1024.bfma  unitCubeXYZF103041.bfma  unitCubeXYZF121.bfma  unitCubeXYZF15625.bfma  unitCubeXYZF2025.bfma  unitCubeXYZF289.bfma  unitCubeXYZF31329.bfma  unitCubeXYZF3969.bfma  unitCubeXYZF529.bfma  unitCubeXYZF62001.bfma  unitCubeXYZF7921.bfma
Doc/: CMakeLists.txt  Doxyfile-mcss  Doxyfile.in
Examples/: CMakeLists.txt  ChebyshevHybridFMM.cpp  ChebyshevOpenMPAdaptiveFMM.cpp  ChebyshevOpenMPFMM.cpp  ChebyshevStarpuImplicit.cpp  CutOffAlgorithm.cpp  DirectComputation.cpp  LagrangeHybridFMM.cpp  LagrangeInterpolationAdaptiveFMM.cpp  LagrangeOpenMPFMM.cpp  LagrangeStarpuImplicit.cpp  MPIInterpolationFMM (2).hpp  RotationFMM.cpp  changeFmaFormat.cpp  compare2Files.cpp  genericStarPUImplicit.hpp  sharedMemoryInterpolationAdaptiveFMM.hpp  sharedMemoryInterpolationFMM.hpp
Tests/: CMakeLists.txt
Tests/GroupTree/: compareDAGmapping.cpp  testBlockedAlgorithm.cpp  testBlockedAlgorithmDyn.cpp  testBlockedChebyshev.cpp  testBlockedMpiAlgorithm.cpp  testBlockedMpiChebyshev.cpp  testBlockedMpiInterpolation.cpp  testBlockedMpiUniform.cpp  testBlockedRotation.cpp  testBlockedRotationCompare.cpp  testBlockedRotationCuda.cpp  testBlockedRotationMpi.cpp  testBlockedRotationMpiCuda.cpp  testBlockedSpeedOperators.cpp  testBlockedTaylor.cpp  testBlockedTree.cpp  testBlockedUnifCuda.cpp  testBlockedUnifCudaBench.cpp  testBlockedUniform.cpp  testBlockedUniformBench.cpp  testBlockedUniformCompare.cpp  testBlockedWithCudaAlgorithm.cpp  testBlockedWithOpenCLAlgorithm.cpp
Tests/Kernels/: DirectAlgorithm.cpp  testChebAlgorithm.cpp  testChebAlgorithmProc.cpp  testFlopsChebAlgorithm.cpp  testOmniPath.cpp  testP2PEfficency.cpp  testRotationAlgorithm.cpp  testRotationAlgorithmProc.cpp  testRotationPeriodicBench.cpp  testSmoothUnifAlgorithm.cpp  testSphericalAlgorithm.cpp  testSphericalBench.cpp  testSphericalBlasAlgorithm.cpp  testSphericalBlockBlasAlgorithm.cpp  testSphericalDlpolyAlgorithm.cpp  testSphericalGalaxyCsv.cpp  testSphericalProcAlgorithm.cpp  testSphericalRotationAlgorithm.cpp  testTaylor.cpp  testTaylorKernel.cpp  testTaylorSimple.cpp  testTsmAlgorithm.cpp  testTuneSphericalBlockBlas.cpp  testUnifAlgorithmProc.cpp
Tests/Utils/: testBlas.cpp  testChebBinaryM2L.cpp  testChebBinarySymM2L.cpp  testChebInterpolator.cpp  testChebInterpolatorExtendedBBox.cpp  testChebM2Lprecomputation.cpp  testChebOctree.cpp  testChebSxUCBSy.cpp  testChebSymmetries.cpp  testChebTensorProduct.cpp  testCompareIOTree.cpp  testDebug.cpp  testFFT.cpp  testFastDiscreteConvolution.cpp  testFmmAlgorithm.cpp  testFmmAlgorithmOmp4.cpp  testFmmAlgorithmPeriodic.cpp  testFmmAlgorithmProc.cpp  testFmmAlgorithmProcPeriodic.cpp  testFmmAlgorithmProcRandom.cpp  testFmmAlgorithmProcRotation.cpp  testFmmAlgorithmProcTsm.cpp  testFmmAlgorithmTsm.cpp  testLapack.cpp  testLapackQR.cpp  testLoader.cpp  testLoaderFMATsm.cpp  testLoaderFMATsmCreate.cpp  testMemStats.cpp  testMpiCsvSaver.cpp  testOctree.cpp  testOctreeFuncteur.cpp  testOctreeIter.cpp  testOctreeParallelFuncteur.cpp  testOctreePrintMorton.cpp  testOctreeRearrange.cpp  testOctreeRearrangePeriodic.cpp  testOctreeRearrangeProc.cpp  testOctreeRearrangeTsm.cpp  testParameterNames.cpp  (+8 more)
UTests/: CMakeLists.txt  FUTester.hpp  utestAlignedMemory.cpp  utestBuffer.cpp  utestChebyshevDirectPeriodic.cpp  utestChebyshevDirectTsm.cpp  utestChebyshevMpi.cpp  utestFBasicParticle.cpp  utestFBasicParticleContainer.cpp  utestFmmAlgorithmProc.cpp  utestInterpolationMultiRhs.cpp  utestLagrange.cpp  utestLagrangeMpi.cpp  utestLetTree.cpp  utestMPILoader.cpp  utestMpiTreeBuilder.cpp  utestRotationDirectTsm.cpp  utestSpherical.cpp  utestSphericalBlasAlgorithm.cpp  utestSphericalDirect.cpp  utestSphericalWithPrevious.cpp  utestStaticMpiTreeBuilder.cpp
UTests/Utils/variadic_vector/: utest_variadic_vector.cpp
Utils/: CMakeLists.txt
Utils/scripts/: analysis.sh  cmpOpenMPAlgo.slurm
inastemp/: CMakeCache.txt  CMakeLists.txt
inastemp/CMakeModules/: GetCompilerInfos.cmake  GetCpuInfos.cmake  getCpuInfos.cpp
include/: CMakeLists.txt  ScalFmmConfig.h.cmake  json.hpp
include/Adaptive/: FAdaptChebKernel.hpp  FAdaptUnifKernel.hpp  FAdaptiveSequential.hpp  FAdaptiveStarPU.hpp  FAdaptiveTask.hpp  FBox.hpp  FDistributedAdaptiveTreeBuilder.hpp  FInOrderNodeIterator.hpp  FNode.hpp  FNodeIterator.hpp  FNodeIteratorBox.hpp  FPrePostOrderNodeIterator.hpp  FTimer.hpp  FTree.hpp  FUnifFlopsKernel.hpp  FVariadicParticleContainer.hpp  FZCurve.hpp  UninitNodeMemoryManager.hpp  UninitialisedMemoryProvider.hpp  kernel_utilities.hpp  starpu_node_data_handles.hpp
include/Arranger/: FOctreeArranger.hpp  FOctreeArrangerProc.hpp  FParticleTypedIndexedMover.hpp
include/Components/: FAbstractKernels.hpp  FAbstractSerializable.hpp  FBasicCell.hpp  FBasicParticle.hpp  FBasicParticleContainer.hpp  FBasicParticleContainer_i.hpp  FParticleType.hpp  FSymbolicData.hpp  FTestCell.hpp  FTestKernels.hpp  FTypedLeaf.hpp
include/Containers/: FAbstractBuffer.hpp  FBlockAllocator.hpp  FBufferReader.hpp  FBufferWriter.hpp  FNeighborIndexes.hpp  FOctree.hpp  FTreeCoordinate.hpp  FVector.hpp
include/Core/: FCoreCommon.hpp  FFmmAlgorithm.hpp  FFmmAlgorithmNewTask.hpp  FFmmAlgorithmOmp4.hpp  FFmmAlgorithmPeriodic.hpp  FFmmAlgorithmSectionTask.hpp  FFmmAlgorithmTask.hpp  FFmmAlgorithmTestTask.hpp  FFmmAlgorithmThread.hpp  FFmmAlgorithmThreadBalance.hpp  FFmmAlgorithmThreadProc.hpp  FFmmAlgorithmThreadProcPeriodic.hpp  FFmmAlgorithmThreadProcTsm.hpp  FFmmAlgorithmThreadTsm.hpp  FFmmAlgorithmTsm.hpp  FP2PExclusion.hpp
include/Files/: FAbstractLoader.hpp  FBasicLoader.hpp  FBlockedMpiInterpolation.hpp  FFmaGenericLoader.hpp  FFmaTsmLoader.hpp  FIOVtk.hpp  FMpiFmaGenericLoader.hpp  FMpiStaticTreeBuilder.hpp  FMpiTreeBuilder.hpp  FRandomLoader.hpp  FTreeBuilder.hpp  FTreeIO.hpp  FTreeMpiCsvSaver.hpp
src/: FAlgorithmTimers.cpp  FLog.cpp  FMemStats.cpp  FMpi.cpp  FSignalHandler.cpp
(+143 files in other folders)
